# fgla

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  adapter_8hpp.html  adapter_8hpp_source.html  annotated.html  annotated_dup.js  backend_8hpp.html  backend_8hpp.js  backend_8hpp_source.html  classes.html  classfgla_1_1Adapter-members.html  classfgla_1_1Adapter.html  classfgla_1_1Adapter.js  classfgla_1_1CommandBuffer-members.html  classfgla_1_1CommandBuffer.html  classfgla_1_1CommandBuffer.js  classfgla_1_1Device-members.html  classfgla_1_1Device.html  classfgla_1_1Device.js  classfgla_1_1Image-members.html  classfgla_1_1Image.html  classfgla_1_1Image.js  classfgla_1_1ImageView-members.html  classfgla_1_1ImageView.html  classfgla_1_1ImageView.js  classfgla_1_1Instance-members.html  classfgla_1_1Instance.html  classfgla_1_1Instance.js  classfgla_1_1Queue-members.html  classfgla_1_1Queue.html  classfgla_1_1Queue.js  classfgla_1_1Result-members.html  classfgla_1_1Result.html  classfgla_1_1Result.js  (+217 more)
.github/workflows/: doxygen.yml
cmake/modules/: force_link.cmake
docs/: adapter_8hpp.html  adapter_8hpp__incl.map  adapter_8hpp__incl.md5  adapter_8hpp_source.html  annotated.html  backend_8hpp.html  backend_8hpp.js  backend_8hpp__incl.map  backend_8hpp__incl.md5  backend_8hpp_source.html  classes.html  classfgla_1_1Adapter-members.html  classfgla_1_1Adapter.html  classfgla_1_1Device-members.html  classfgla_1_1Device.html  classfgla_1_1Device.js  classfgla_1_1Instance-members.html  classfgla_1_1Instance.html  classfgla_1_1Instance.js  classfgla_1_1Queue.html  classfgla_1_1ext_1_1windowing_1_1Window.html  classfgla_1_1ext_1_1windowing_1_1WindowExtension.html  classfgla_1_1ext_1_1windowing_1_1WindowExtension__coll__graph.map  classfgla_1_1ext_1_1windowing_1_1WindowExtension__coll__graph.md5  classfgla_1_1util_1_1OptRef-members.html  classfgla_1_1util_1_1OptRef.html  device_8hpp.html  device_8hpp__dep__incl.md5  device_8hpp__incl.map  device_8hpp__incl.md5  device_8hpp_source.html  dir_018b20d072b37638c552c2cebdc98d41.html  dir_018b20d072b37638c552c2cebdc98d41.js  dir_018b20d072b37638c552c2cebdc98d41_dep.map  dir_018b20d072b37638c552c2cebdc98d41_dep.md5  dir_aaba5f898e077f31ac913483ac61140e.html  dir_aaba5f898e077f31ac913483ac61140e_dep.map  dir_d64ea27deaedb1dd3cb29e801020255b.html  dir_d64ea27deaedb1dd3cb29e801020255b.js  error_8hpp.html  (+91 more)
docs/html/: adapter_8hpp.html  adapter_8hpp.js  adapter_8hpp__dep__incl.map  adapter_8hpp__dep__incl.md5  adapter_8hpp__incl.map  adapter_8hpp__incl.md5  adapter_8hpp_source.html  annotated.html  backend_8hpp.html  backend_8hpp__incl.map  backend_8hpp__incl.md5  backend_8hpp_source.html  classfgla_1_1Adapter.html  classfgla_1_1Device-members.html  classfgla_1_1Device.html  classfgla_1_1Device.js  classfgla_1_1Instance.html  classfgla_1_1Queue-members.html  classfgla_1_1Queue.html  classfgla_1_1ext_1_1windowing_1_1Window-members.html  classfgla_1_1ext_1_1windowing_1_1Window.html  classfgla_1_1ext_1_1windowing_1_1WindowExtension-members.html  classfgla_1_1ext_1_1windowing_1_1WindowExtension.html  classfgla_1_1ext_1_1windowing_1_1WindowExtension.js  classfgla_1_1ext_1_1windowing_1_1WindowExtension__coll__graph.map  classfgla_1_1ext_1_1windowing_1_1WindowExtension__coll__graph.md5  classfgla_1_1util_1_1OptRef.html  device_8hpp.html  device_8hpp__dep__incl.map  device_8hpp__incl.map  device_8hpp__incl.md5  device_8hpp_source.html  dir_aaba5f898e077f31ac913483ac61140e.html  dir_aaba5f898e077f31ac913483ac61140e.js  dir_aaba5f898e077f31ac913483ac61140e_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d64ea27deaedb1dd3cb29e801020255b.html  dir_d64ea27deaedb1dd3cb29e801020255b.js  dir_d64ea27deaedb1dd3cb29e801020255b_dep.map  (+93 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_3.js  all_4.js  all_8.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_8.js  classes_c.js  enumvalues_0.js  enumvalues_5.js  files_0.js  functions_0.js  functions_5.js  functions_8.js  namespaces_0.js  typedefs_0.js  variables_0.js  variables_2.js  variables_7.js  variables_8.js  variables_b.js
impl/: CMakeLists.txt  instance.cpp
impl/backends/: CMakeLists.txt
impl/backends/opengl/: CMakeLists.txt  backend.cpp  instance.cpp
impl/backends/vulkan/: CMakeLists.txt  adapter.cpp  backend.cpp  command_buffer.cpp  device.cpp  image.cpp  instance.cpp  queue.cpp
impl/backends/vulkan/ext/: window.cpp
impl/backends/vulkan/ext/windowing/: surface.cpp  window.cpp
inc/fgla/: context.hpp  debug.hpp  device.hpp  error.hpp  fgla.hpp  geometry.hpp  instance.hpp  internal.hpp  render.hpp  util.hpp  window.hpp
inc/result/: result.hpp
include/fgla/: adapter.hpp  backend.hpp  command_buffer.hpp  device.hpp  error.hpp  extension.hpp  fgla.hpp  image.hpp  image_view.hpp  instance.hpp  internal.hpp  queue.hpp  types.hpp  util.hpp  window.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_f.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  (+49 more)
src/: agnostic.cmake  vulkan.cmake
src/agnostic/: _.c  debug.cpp  geometry.cpp  util.cpp
src/vulkan-glfw3/: common.cpp  common.hpp  device.cpp  window.cpp  (+1 more)
test/: rolling.cpp  test_devenv.cpp  test_instance.cpp  test_render.cpp  test_window.cpp
tests/: CMakeLists.txt  test_setup.cpp
tests/adapter/: test.cpp
tests/backend_registry/: test.cpp
tests/command_buffer/: test.cpp
tests/device_queues/: test.cpp
tests/ext_window/: test.cpp
tests/ext_window_surface/: test.cpp
tests/ext_window_surface_device/: test.cpp
tests/ext_window_surface_device_image_view/: test.cpp
tests/instance/: test.cpp
tests/vulkan_queue_allocator/: test.cpp
(+58 files in other folders)
